# ShiroSight

./: .devcontainer.json  .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml
.devcontainer/: .devcontainer.json  Dockerfile  devcontainer.json  install.sh
.github/workflows/: knative.yaml  terraform.yaml
deployments/helm/services/: analyze-with-llm.yaml  collect-logs.yaml  notify.yaml
deployments/helm/tasks/: aggregate-results.yaml  collect-logs.yaml  notify.yaml  process-chunks.yaml
deployments/helm/workflows/: log-analysis-workflow.yaml
deployments/knative/services/: aggregate-results.yaml  process-chunks.yaml
deployments/knative/tasks/: analyze-with-llm.yaml
deployments/sam/: template.yaml
deployments/terraform/: README.md  functions.tf  iam.tf  main.tf  variables.tf
deployments/terraform/statemachine/: definition.asl.json
docs/: install_sdk.md  installation.md
functions/aggregate-results/: app.py  package.json
functions/analyze-with-llm/: app.py  package.json
functions/collect-logs/: app.py  main.ts  package.json  requirements.txt
functions/notify/: app.py  main.ts  package.json
functions/process-chunks/: app.py  main.ts  package.json  template.yaml
functions/shared/: package.json
src/ShiroSightAnalyzer/: main.py
src/ShiroSightCollector/: cloudwatch.py  main.py  upload.py
src/ShiroSightUtilities/: circuit_breaker.py
src/analyzer/: main.py
src/collector/: athena.py  cloudwatch.py  exceptions.py  main.py  types.py
src/utilities/: timestamps.py
test/code/collector/: main.py
